[package]
name = "morphx-wordlist"
version = "0.1.0"
edition = "2021"
description = "keyword based wordlist generator"
repository = "https://github.com/nurfianqodar/morphx-wordlist"

[[bin]]
name = "morphx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
itertools = { version = "0.14" }
rand = "0.10.1"
