[package]
name = "morphx-wordlist"
version = "0.1.0"
edition = "2021"
description = "keyword based wordlist generator"
readme = "README.md"
repository = "https://github.com/nurfianqodar/morphx-wordlist"
license = "MIT"
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "morphx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
itertools = { version = "0.14" }
rand = "0.10.1"
