[package]
name = "morphx-wordlist"
version = "0.1.0"
edition = "2021"
description = "Fast keyword-based wordlist generator for combinatoric password, username, and pattern expansion"
readme = "README.md"
repository = "https://github.com/nurfianqodar/morphx-wordlist"
license = "MIT"
keywords = ["burteforce", "cli", "password", "word-generator", "wordlist"]
categories = [
  "algorithms",
  "command-line-utilities",
  "development-tools",
  "text-processing"
]

[[bin]]
name = "morphx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
itertools = { version = "0.14" }
rand = "0.10.1"
